Stream audio from dropbox

--- a/public/index.html
+++ b/public/index.html
@@ -32,15 +32,23 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script> 
+      window.songInfo = [
+      {
+      title: "Bass",
+      file: "https://dl.dropboxusercontent.com/scl/fi/cngffj25p2378zetmcsr5/Bass.mp3?rlkey=tuzagn83gbvmh76a38rw902c5&st=diksz0tz&dl=0",
+      colour: "#ad1b1b",
+    },
+    {
+      title: "Solo",
+      file: "https://dl.dropbox.com/scl/fi/8ziper0tuvbjf150ojgab/Solo.mp3?rlkey=edpd98w1ms9tj5t0yebm020zl&st=hy41ospq&dl=0",
+      colour: "#10e8cf",
+    },
+    {
+      title: "Drums",
+      file: "https://dl.dropbox.com/scl/fi/54b44c67sqqbciwqtstra/VP.mp3?rlkey=ni58zpnkqjq48q9whhgftx1j6&st=zto9bpag&dl=0",
+      colour: "#a432a8",
+    }];
+    </script>
   </body>
 </html>
