WIP: Dropbox pdf download

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
     <script>
       window.songInfo = {
         songtitle: "Walkin' on Sunshine",
+        pdf: "https://dl.dropboxusercontent.com//scl/fi/rsjipgzq4z87d0001ftkj/Walking-on-Sunshine.pdf?rlkey=1fxhxrg8tr8ll4x1nc8nsbzp4&st=y4z9s8w1&dl=0"
       };
       window.stemInfo = [
         {
