--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <script>
       window.songInfo = {
         songtitle: "Walkin' on Sunshine",
-        pdf: "https://dl.dropboxusercontent.com//scl/fi/rsjipgzq4z87d0001ftkj/Walking-on-Sunshine.pdf?rlkey=1fxhxrg8tr8ll4x1nc8nsbzp4&st=y4z9s8w1&dl=0"
+        pdf: "https://drive.google.com/file/d/1sBo_Zxk58Cc8pSMnDVPWcPSvVDpZt-iG/preview"
       };
       window.stemInfo = [
         {
